--- a/livraria/src/main/resources/br/edu/femass/livraria/academico-view.fxml
+++ b/livraria/src/main/resources/br/edu/femass/livraria/academico-view.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+
 <HBox minHeight="356.0" minWidth="538.0" prefHeight="356.0" prefWidth="538.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.femass.livraria.gui.AcademicoController">
     <children>
         <Pane minHeight="356.0" minWidth="225.0" prefHeight="356.0" prefWidth="225.0">
@@ -11,7 +13,7 @@
                 <Button fx:id="BtnExcluir" layoutX="123.0" layoutY="318.0" mnemonicParsing="false" onAction="#BtnExcluir_Action" text="Excluir" />
                 <Label layoutX="193.0" layoutY="30.0" text="Nome" />
                 <Label layoutX="195.0" layoutY="74.0" text="CPF" />
-                <Label layoutX="197.0" layoutY="74.0" text="Tipo acadêmico" />
+                <Label layoutX="193.0" layoutY="115.0" text="Tipo acadêmico" />
             </children>
         </Pane>
         <Pane minHeight="356.0" minWidth="316.0" prefHeight="365.0" prefWidth="316.0">
@@ -20,7 +22,7 @@
                 <Button fx:id="BtnGravar" disable="true" layoutX="209.0" layoutY="233.0" mnemonicParsing="false" onAction="#BtnGravar_Action" prefHeight="36.0" prefWidth="92.0" text="Gravar" />
                 <Button fx:id="BtnCancelar" disable="true" layoutX="14.0" layoutY="233.0" mnemonicParsing="false" onAction="#BtnCancelar_Action" prefHeight="36.0" prefWidth="92.0" text="Cancelar" />
                 <TextField fx:id="TxtNome" disable="true" layoutX="39.0" layoutY="30.0" prefHeight="25.0" prefWidth="262.0" />
-                <ComboBox fx:id="CboEstado_Academico" disable="true" layoutX="120.0" layoutY="261.0" prefHeight="27.0" prefWidth="200.0" />
+                <ComboBox fx:id="CboEstado_Academico" disable="true" layoutX="58.0" layoutY="110.0" prefHeight="27.0" prefWidth="234.0" />
             </children>
         </Pane>
     </children>
